# CCCS-Yara

./: .gitignore  .gitmodules  CCCS_YARA.yml  CCCS_YARA_values.yml  CCCS_Yara.yml  CCCS_Yara_values.yml  LICENSE  README.md  pyproject.toml  requirements.txt  settings.json  setup.py  yara_validator_cli.py
.devcontainer/: devcontainer.json
cccs_yara/: cli.py  constants.py  enrichment.py  main.py  validator.py
cccs_yara/knowledge_bases/: cti.py  lazarusholic.py  malpedia.py  misp.py
pipelines/: publish.yaml  test.yaml
templates/: CCCS_Yara_Template.yara
tests/: test_cli.py  test_cti.py  test_enrichment.py  test_main.py  test_parsing.py  test_run_yara_validator.py  test_validation.py
yara-validator/: README.md  validator_cfg.yml  validator_functions.py  yara_file_processor.py  yara_validator.py
yara-validator/cfg/: filter_casefold.py
yara-validator/stix2_patch/: filter_casefold.py
yara_validator/: CCCS_YARA.yml  CCCS_YARA_values.yml  README.md  cli.py  constants.py  validator.py  validator_cfg.yml  validator_functions.py  yara_file_processor.py
